--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <label for="Firstname">Prénom</label>
                 <input type="text" id="Firstname" placeholder="Prénom" required minlength="2"><br/>
             <label for="age">Âge</label>
-                <input type="number" name="age" id="age" placeholder="Âge"><br/>
-            <label for="sexe">Sexe</label>
+                <input type="number" name="age" id="age" placeholder="Âge" required><br/>
+            <label for="sexe" >Sexe</label>
                 <input type="radio" name="sexe" id="sexe" checked>
                     <label for="sexe">Homme</label>
                 <input type="radio" name="sexe" id="sexef">
@@ -24,19 +24,19 @@
             <label for="Email">Adresse Email</label>
                 <input type="email" name="Email" id="Email" placeholder="exemple.email@gmail.com" required><br/>
             <label for="Adresse">Adresse postale</label>
-                <input type="text" id="Adresse" placeholder="Adresse Postale"><br/>
+                <input type="text" id="Adresse" placeholder="Adresse Postale" required><br/>
             <label for="Ville">Ville</label>
                 <input type="text" id="Ville" placeholder="Villes" required><br/>
             <label for="codep">Code postales</label>
                 <input type="text" name="codep" id="codep" placeholder="ex:59000" size="5" maxlength="5" required pattern="[0-9]{5}"><br/>
             <label for="Métier">Métier exercé</label>
-                <input type="text" id="Métier"><br/>
+                <input type="text" id="Métier" required><br/>
             <label for="Nationalité">Nationalité</label>
-                <input type="text" id="Nationalité"><br/>
+                <input type="text" id="Nationalité" required><br/>
             <label for="birthday">Date de naissance</label>
-                <input type="date" name="birthday" id="birthday"><br/>
+                <input type="date" name="birthday" id="birthday" required><br/>
             <label for="Pays">Pays de naissance</label>
-                <input type="text" id="Pays" list="payslist" placeholder="Pays de naissance">
+                <input type="text" id="Pays" list="payslist" placeholder="Pays de naissance" required>
                     <datalist id="payslist">
                         <option value="France"></option>
                         <option value="Allemagne"></option>
@@ -52,9 +52,9 @@
            <label for="NuméroPass">Numéro du passeport</label>
                 <input type="text" id="NuméroPass" required minlength="9" maxlength="9"><br/>
             <label for="datePass">Date de délivrance du passeport</label>
-                <input type="date" name="datePass" id="datePass"><br/>
+                <input type="date" name="datePass" id="datePass" required><br/>
             <label for="dateValPass">Date de validité du passeport</label>
-                <input type="date" name="dateValPass" id="dateValPass"><br/>
+                <input type="date" name="dateValPass" id="dateValPass" required><br/>
         </fieldset>
         <input type="submit" value="envoyer">
     </form>
