--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
 <body>
     <form>
         <fieldset>
-            <legend>Infomations Personelles</legend>
-            <label for="Name">Nom:</label>
+            <legend>Infomations Personnelles</legend>
+            <label for="Name">Nom*:</label>
                 <input type="text" id="Name" required minlength="2" autofocus>
-            <label for="Firstname">Prénom:</label>
+            <label for="Firstname">Prénom*:</label>
                 <input type="text" id="Firstname" required minlength="2"><br/>
-            <label for="age">Âge:</label>
+            <label for="age">Âge*:</label>
                 <input type="number" name="age" id="age" required><br/>
-            <label for="birthday">Date de naissance:</label>
+            <label for="birthday">Date de naissance*:</label>
                 <input type="date" name="birthday" id="birthday" required><br/>
-            <label for="sexe" >Sexe:</label>
+            <label for="sexe" >Sexe*:</label>
                 <input type="radio" name="sexe" id="sexe" checked>
                     <label for="sexe">Homme</label>
                 <input type="radio" name="sexe" id="sexef">
                     <label for="sexef">Femme</label><br/>
-            <label for="Email">Adresse Email:</label>
+            <label for="Email">Adresse Email*:</label>
                 <input type="email" name="Email" id="Email" placeholder="exemple.email@gmail.com" required><br/>
-            <label for="Adresse">Adresse postale:</label>
+            <label for="Adresse">Adresse postale*:</label>
                 <input type="text" id="Adresse" required><br/>
-            <label for="Ville">Ville:</label>
+            <label for="Ville">Ville*:</label>
                 <input type="text" id="Ville" required><br/>
-            <label for="codep">Code postales:</label>
+            <label for="codep">Code postales*:</label>
                 <input type="text" name="codep" id="codep" placeholder="ex:59000" size="6" maxlength="5" required pattern="[0-9]{5}"><br/>
-            <label for="Nationalité">Nationalité:</label>
+            <label for="Nationalité">Nationalité*:</label>
                 <input type="text" id="Nationalité" required><br/>
-            <label for="Métier">Métier exercé:</label>
+            <label for="Métier">Métier exercé*:</label>
                 <select id="Métier">
-                    <option value="Développeur Front-end">Développeur Front-end</option>
+                    <option value="Développeur Front-end" selected>Développeur Front-end</option>
                     <option value="Développeur Back-end">Développeur Back-end</option>
-                    <option value="Formateur pour les deux d'avant">Formateur pour les deux d'avant</option>
+                    <option value="Médiateur numérique">Médiateur numérique</option>
                     <option value="Administrateur base de données">Administrateur base de données</option>
                     <option value="Chef de projet web">Chef de projet web</option>
                     <option value="Designer UX/UI">Designer UX/UI</option>
                     <option value="Développeur Full Stack">Développeur Full Stack</option>
                     <option value="Sans emploi">Sans emploi</option>
                 </select><br/>
-            <label for="payslist">Pays de naissance:</label>
-                <select id="payslist">
-                    <option value="France">France</option>
+            <label for="payslist">Pays de naissance*:</label>
+                <select id="payslist" name="payslist">
+                    <option value="France" selected>France</option>
                     <option value="Allemagne">Allemagne</option>
                         <option value="Angleterre">Angleterre</option>
                         <option value="Belgique">Belgique</option>
@@ -55,13 +55,13 @@
                         <option value="Portugal">Portugal</option>
                         <option value="Chine">Chine</option>
                 </select><br/>
-            <label for="Sécu">Numéro de sécurité social:</label>
+            <label for="Sécu">Numéro de sécurité social*:</label>
                 <input type="text" name="Sécu" id="Sécu" maxlength="15" required pattern="[0-9]{15}"><br/>
-           <label for="NuméroPass">Numéro du passeport:</label>
+           <label for="NuméroPass">Numéro du passeport*:</label>
                 <input type="text" id="NuméroPass" required minlength="9" maxlength="9"><br/>
-            <label for="datePass">Date de délivrance du passeport:</label>
+            <label for="datePass">Date de délivrance du passeport*:</label>
                 <input type="date" name="datePass" id="datePass" required><br/>
-            <label for="dateValPass">Date de validité du passeport:</label>
+            <label for="dateValPass">Date de validité du passeport*:</label>
                 <input type="date" name="dateValPass" id="dateValPass" required><br/>
         </fieldset>
         <input type="submit" value="envoyer">
