--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
             <label for="codep">Code postales*:</label>
                 <input type="text" name="codep" id="codep" placeholder="ex:59000" size="6" maxlength="5" required pattern="[0-9]{5}"><br/>
             <label for="Nationalité">Nationalité*:</label>
-                <input type="text" id="Nationalité" required><br/>
+                <select id="Nationalité" name="Nationalité">
+                    <option value="Française" selected>Française</option>
+                    <option value="Allemande">Allemande</option>
+                    <option value="Anglaise">Anglaise</option>
+                    <option value="Belge">Belge</option>
+                    <option value="Japonnaise">Japonnaise</option>
+                    <option value="Espagnole">Espagnole</option>
+                    <option value="Portugaise">Portugal</option>
+                    <option value="Chinoise">Chinoise</option>
+                </select><br/>
             <label for="Métier">Métier exercé*:</label>
                 <select id="Métier">
                     <option value="Développeur Front-end" selected>Développeur Front-end</option>
@@ -55,10 +64,10 @@
                     <option value="Portugal">Portugal</option>
                     <option value="Chine">Chine</option>
                 </select><br/>
-            <label for="Sécu">Numéro de sécurité social*:</label>
+            <label for="Sécu">Numéro de sécurité sociale*:</label>
                 <input type="text" name="Sécu" id="Sécu" maxlength="15" required pattern="[0-9]{15}"><br/>
            <label for="NuméroPass">Numéro du passeport*:</label>
-                <input type="text" id="NuméroPass" required minlength="9" maxlength="9"><br/>
+                <input type="text" id="NuméroPass" required minlength="9" maxlength="11" pattern="[0-9]{2} [A-Z]{2} [0-9]{5}" placeholder="ex:33 AA 33333"><br/>
             <label for="datePass">Date de délivrance du passeport*:</label>
                 <input type="date" name="datePass" id="datePass" required><br/>
             <label for="dateValPass">Date de validité du passeport*:</label>
